Auto add --add-opens when run file